# PresentationMagicTool

./: BUGFIX_高亮修复说明.md  LICENSE  Python执行功能使用指南.md  README.md  Windows编码问题修复说明.md
PresentationMagicTool/: .replit  index.html  replit.md  script.js  server.py  server_enhanced.py  styles.css
PresentationMagicTool/PresentationMagicTool/: index.html  script.js  styles.css  test.txt  test_highlight.js  test_python.py
project/: CMakeLists.txt  README.md  build.bat
project/examples/: hello.cpp  hello.js  hello.py
project/src/: gui_main.cpp
